# rlarg

./: .gitignore  CONFIG  README.md  TODO  TODO.md  all.conf  all.conf.real  colors.conf  default.source  default.vi  dyn.conf  meson.build  meson.options  readme.conf  rlarg.h
bash/: rlarg  rlc
rlarg/: arg-after.c  arg-compgen.c  arg-compgen.h  arg-core.c  arg-parse-config.c  arg-parse-config.h  arg-parse.c  arg-parse.h  arg-runtime.c  arg-stream.c  arg-stream.h  arg-x.c  arg-x.h  arg.h  argx-attr.c  argx-attr.h  argx-callback.c  argx-callback.h  argx-group.c  argx-group.h  argx-hint.c  argx-hint.h  argx-so.c  argx-so.h  argx-type.c  argx.c  argx.h
src/: arg.c  arg.h  meson.build  rlarg.c  rlarg.h
test/: test_arg.c  test_arg.conf  test_arg.sh
tests/: all.c  bool.c  dyn.c  fail-duplicate.c  fail-duplicate2.c  meson.build  parse-config.c  readme.c  sandbox.c  test.c
tests/parse-config/: array-whitespace.conf  array-whitespace2.conf  array-whitespace3.conf  array-whitespace4.conf  array-whitespace5.conf  array-whitespace6.conf  array.conf  array2.conf  empty-array.conf  empty-string.conf  file1.conf  file2.conf  file3.conf  file4.conf  file5.conf  file6.conf  file7.conf  file8.conf  file9.conf  scope1.conf  scope2.conf
